--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@ feature_row:
     btn_label: "Learn More"
     btn_class: "btn--primary"
 ---
+<div class="notice--info">
+  <h4>Now recruiting undergraduate and M.S. course students!</h4>
+  <p>We are looking for passionate researchers interested in robotics, AI, and computer vision. <a href="/about/join-us/">Learn more</a></p>
+ </div>
 
 {% include feature_row %}
 
