--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ feature_row:
 ---
 <div class="notice--info">
   <h4>Now recruiting undergraduate and M.S. course students!</h4>
-  <p>We are looking for passionate researchers interested in robotics, AI, and computer vision. <a href="/about/join-us/">Learn more</a></p>
+  <p>We are looking for passionate researchers interested in robotics, AI, and computer vision. <a href="https://wjahn.github.io/rils/about/join-us/">Learn more</a></p>
  </div>
 
 {% include feature_row %}
