--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@ feature_row:
     btn_class: "btn--primary"
 ---
 <div class="notice--info">
-  <h4>Now recruiting undergraduate and M.S. course students!</h4>
-  <p>We are looking for passionate researchers interested in robotics, AI, and computer vision. <a href="https://wjahn.github.io/rils/about/join-us/">Learn more</a></p>
+  <h4>학부 연구생 및 석.박과정생 모집 중</h4>
+  <p>모집 분야
+    - 컴퓨터비전 및 딥러닝 (Semantic Segmentation)
+      -- 프로젝트 참여 (무인예초, 수산부산물)
+    - 로봇틱스 모방학습 (Vision-Language-Action)
+    - 로봇틱스 오프라인 역강화학습 (Offline Inverse Reinforcement Learning) 
+    <a href="https://wjahn.github.io/rils/about/join-us/">Learn more</a></p>
  </div>
 
 {% include feature_row %}
