--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@ feature_row:
 ---
 <div class="notice--info">
   <h4>학부 연구생 및 석.박과정생 모집 중</h4>
-  <p>모집 분야
-    - 컴퓨터비전 및 딥러닝 (Semantic Segmentation)
-      -- 프로젝트 참여 (무인예초, 수산부산물)
-    - 로봇틱스 모방학습 (Vision-Language-Action)
-    - 로봇틱스 오프라인 역강화학습 (Offline Inverse Reinforcement Learning) 
-    <a href="https://wjahn.github.io/rils/about/join-us/">Learn more</a></p>
- </div>
+  <p>모집 분야<br>
+    - 컴퓨터비전 및 딥러닝 (Semantic Segmentation)<br>
+    &nbsp;&nbsp;-- 프로젝트 참여 (무인예초, 수산부산물)<br>
+    - 로봇틱스 모방학습 (Vision-Language-Action)<br>
+    - 로봇틱스 오프라인 역강화학습 (Offline Inverse Reinforcement Learning)<br>
+    <a href="https://wjahn.github.io/rils/about/join-us/">Learn more</a>
+  </p>
+</div>
 
 {% include feature_row %}
 
