--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@ feature_row:
     btn_label: "Learn More"
     btn_class: "btn--primary"
 ---
-<div class="notice--info">
-  <h4>학부 연구생 및 석.박과정생 모집 중</h4>
-  <p>모집 분야<br>
-    - 컴퓨터비전 및 딥러닝 (Semantic Segmentation)<br>
-    &nbsp;&nbsp;-- 프로젝트 참여 (무인예초, 수산부산물)<br>
-    - 로봇틱스 모방학습 (Vision-Language-Action)<br>
-    - 로봇틱스 오프라인 역강화학습 (Offline Inverse Reinforcement Learning)<br>
-    <a href="https://wjahn.github.io/rils/about/join-us/">Learn more</a>
+<div class="notice--info" style="border-left: 5px solid #4a90e2; background-color: #f0f8ff; padding: 1em; margin: 1em 0; border-radius: 8px;">
+  <h4 style="color: #2c3e50; margin-top: 0;">🎓 학부 연구생 및 석·박과정생 모집 중</h4>
+  <p style="margin: 0.5em 0;">📌 <strong>모집 분야:</strong></p>
+  <ul style="list-style-type: disc; padding-left: 1.5em; margin: 0;">
+    <li>
+      <strong>컴퓨터비전 및 딥러닝 (Semantic Segmentation)</strong><br>
+      <small style="color: #555;">- 프로젝트 참여: 무인예초, 수산부산물</small>
+    </li>
+    <li><strong>로봇틱스 모방학습</strong> (Vision-Language-Action)</li>
+    <li><strong>로봇틱스 오프라인 역강화학습</strong> (Offline Inverse Reinforcement Learning)</li>
+  </ul>
+  <p style="margin-top: 1em;">
+    👉 <a href="https://wjahn.github.io/rils/about/join-us/" style="color: #007acc; text-decoration: underline;">자세히 보기 (Join Us)</a>
   </p>
 </div>
+
 
 {% include feature_row %}
 
