--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ header:
 excerpt: "인하대학교 로봇 지능 학습 및 시스템 연구실"
 feature_row:
   - image_path: /assets/images/home/rl.png
-    alt: "Reinforcement Learning"
-    title: "Reinforcement Learning"
-    excerpt: "Robots imitating human actions using RL"
+    alt: "Imitation Learning"
+    title: "Imitation Learning"
+    excerpt: "Robots imitating human actions"
     url: "/about/research-area/#reinforcement-learning"
     btn_label: "Learn More"
     btn_class: "btn--primary"
