--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ feature_row:
     btn_class: "btn--primary"
 ---
 <div class="notice--info" style="border-left: 5px solid #4a90e2; background-color: #f0f8ff; padding: 1em; margin: 1em 0; border-radius: 8px;">
-  <h4 style="color: #2c3e50; margin-top: 0;">🎓 학부 연구생 및 석·박과정생 모집 중</h4>
+  <h4 style="color: #2c3e50; margin-top: 0;">🎓 학부 연구생 및 석·박과정생 모집 중 </h4>
   <p style="margin: 0.5em 0;">📌 <strong>모집 분야:</strong></p>
   <ul style="list-style-type: disc; padding-left: 1.5em; margin: 0;">
     <li>
@@ -43,7 +43,7 @@ feature_row:
     <li><strong>로봇틱스 오프라인 역강화학습</strong> (Offline Inverse Reinforcement Learning)</li>
   </ul>
   <p style="margin-top: 1em;">
-    👉 <a href="https://wjahn.github.io/rils/about/join-us/" style="color: #007acc; text-decoration: underline;">자세히 보기 (Join Us)</a>
+    👉 <a href="https://drive.google.com/file/d/1VXiEAL0vELNv9oV3ZJdSILTc4Xrr2YBy/view?usp=sharing" style="color: #007acc; text-decoration: underline;">홍보문 자세히 보기 (Join Us)</a>
   </p>
 </div>
 
